--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3.1'
 
 services:
-  postgres:
-    image: postgres
+  postgres_service:
+    image: postgres_image
     restart: always
-    container_name: postgres
+    container_name: postgres_service
     ports:
       - "5432:5432"
     volumes:
