--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   postgres_service:
-    image: postgres_image
+    image: postgres
     restart: always
     container_name: postgres_service
     ports:
@@ -13,7 +13,7 @@ services:
 
   phonebook_service:
     depends_on:
-      - postgres
+      - postgres_service
     build: ./docker/
     container_name: phonebook_service
     image: phonebook_image
