update env file

--- a/scripts/project.env
+++ b/scripts/project.env
@@ -3,5 +3,9 @@ SQL_PASSWORD=P@ssw0rd
 SQL_DLL=update
 SQL_DB=postgres
 SQL_HOST=postgres
-
+POSTGRES_DIALECT=org.hibernate.dialect.PostgreSQL81Dialect
+POSTGRES_USERNAME=postgres
+POSTGRES_PASSWORD=P@ssw0rd
+POSTGRES_DATA=/pgdata
+POSTGRES_DB=postgres
 
