fixes and updates

--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     ports:
       - "8080:8080"
     links:
-      - postgres:database
+      - postgres_service:database
     env_file:
       - ./project.env
 
