--- a/scripts/project.env
+++ b/scripts/project.env
@@ -2,7 +2,7 @@ SQL_USER=postgres
 SQL_PASSWORD=P@ssw0rd
 SQL_DLL=update
 SQL_DB=postgres
-SQL_HOST=postgres
+SQL_HOST=postgres_service
 POSTGRES_DIALECT=org.hibernate.dialect.PostgreSQL81Dialect
 POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=P@ssw0rd
